# cicd_tests

./: .dockerignore  .gitignore  .~lock.Presentation.pptx#  Dockerfile  Notebook_1.ipynb  Notebook_2.ipynb  README.md  api.py  docker-compose.yml  pyproject.toml  requirements.txt  test.py
.github/workflows/: tests.yaml
mlflow_try/: MLOps_avec_MLFlow.ipynb
