[tool.poetry]
name = "lifecycle-tests"
version = "0.1.0"
description = "We will see"
authors = ["Laura"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
numpy = "^1.26.4"
pandas = "^2.2.0"
pydantic = "^2.6.1"
mlflow = "^2.10.2"
boto3 = "^1.34.44"
scikit-learn = "^1.4.1.post1"
httpx = "^0.26.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
